[tool.poetry]
name = "python-dev"
version = "0.1.0"
description = ""
authors = ["Harsh Shekhar <harsh.shekhar@hitachivantara.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
